--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "esbuild": "^0.24.0",
     "glob": "^11.0.0",
     "mongodb": "^6.9.0",
+    "ulid": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
