--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["prev-dump/*"],
+    "ignore": ["prev-dump/*.py"],
     "ignoreUnknown": true
   },
   "linter": {
